data/derived/comb/progs/unify/prog6543.ml.out
Characters 84-85:
  let f a x = a^sep^t in
                    ^
Error: This expression has type 'a list
       but an expression was expected of type string
